--- a/src/style.css
+++ b/src/style.css
@@ -53,6 +53,9 @@ nav .circle {
 }
 #progress {
   -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 1px;
+  text-overflow: "";
   width: 100%;
   height: 6px;
   background: #f53192;
