--- a/src/style.css
+++ b/src/style.css
@@ -63,3 +63,13 @@ nav .circle {
   cursor: pointer;
   margin: 40px 0;
 }
+#progress::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: #f53192;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 8px solid #fff;
+  box-shadow: 0 5px 5px rgba(255, 26, 26, 0.22);
+}
