--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 
 .container {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #333;
   display: flex;
   align-items: center;
@@ -20,10 +20,11 @@
   padding: 25px 35px;
   text-align: center;
 }
+
 nav {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 nav .circle {
   border-radius: 50%;
@@ -34,6 +35,16 @@ nav .circle {
   color: #f53192;
   box-shadow: 0 5px 10px rgba(255, 26, 26, 0.22);
 }
+
+nav h2 {
+  color: #5d4449;
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+.fa-bars {
+  cursor: pointer;
+}
+
 .song-img {
   width: 220px;
   height: 220px;
@@ -41,6 +52,25 @@ nav .circle {
   border: 8px solid #fff;
   box-shadow: 0 10px 60px rgba(255, 26, 26, 0.22);
 }
+.details .title {
+  margin-top: 10px;
+}
+
+.details .artist {
+  margin-top: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #2e8a9c;
+}
+
+.song-timer {
+  color: #5d4449;
+  display: flex;
+  justify-content: space-between;
+  font-weight: 600;
+  margin: 1rem 0;
+}
+
 .music-player h1 {
   font-size: 1.25rem;
   font-weight: 400;
@@ -52,26 +82,25 @@ nav .circle {
   color: #333;
 }
 #progress {
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  appearance: none;
   text-indent: 1px;
   text-overflow: "";
-  width: 100%;
+  width: 90%;
   height: 6px;
   background: #f53192;
   border-radius: 4px;
   cursor: pointer;
-  margin: 40px 0;
+  margin: 10px 0;
 }
 #progress::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  appearance: none;
   background: #f53192;
   width: 30px;
   height: 30px;
   border-radius: 50%;
   border: 8px solid #fff;
   box-shadow: 0 5px 5px rgba(255, 26, 26, 0.22);
+  cursor: pointer;
 }
 .controls {
   display: flex;
@@ -95,4 +124,58 @@ nav .circle {
   transform: scale(1.5);
   background: #f53192;
   color: #fff;
+}
+.play-all {
+  width: 50px;
+  height: 50px;
+  margin: 20px;
+  background: #fff;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: #f53192;
+  box-shadow: 0 10px 20px rgba(255, 26, 26, 0.22);
+  cursor: pointer;
+}
+
+.volume {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.6rem 0 1rem 0;
+}
+.volume p {
+  display: flex;
+  align-items: center;
+  background: #2e8a9c;
+  color: #fff;
+  font-size: 1.4rem;
+  height: 2rem;
+  padding: 0 3px;
+  margin-right: 5px;
+}
+.volume i {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  background: #fff;
+  color: #f53192;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 10px 20px rgba(255, 26, 26, 0.22);
+  cursor: pointer;
+}
+.volume input {
+  appearance: none;
+  text-indent: 1px;
+  text-overflow: "";
+  width: 50%;
+  height: 6px;
+  background: #f53192;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 10px 0;
 }
