--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@
   width: 400px;
   padding: 25px 35px;
   text-align: center;
+  overflow: hidden;
 }
 
 nav {
@@ -178,4 +179,64 @@ nav h2 {
   border-radius: 4px;
   cursor: pointer;
   margin: 10px 0;
+}
+.music-playlist {
+  position: absolute;
+  margin: 0 auto;
+  top: 0;
+  padding: 1rem;
+  background: rgba(0, 0, 0, 0.9);
+  width: 100%;
+  height: 100%;
+  transform: translateX(-100%);
+  transition: all 0.5s;
+  width: 400px;
+}
+.playlist-header {
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0;
+  border-bottom: 1px solid rgb(114, 114, 114);
+  font-size: 1.4rem;
+}
+
+.playlist-header .fa-xmark {
+  cursor: pointer;
+}
+.playlist-div {
+  width: 100%;
+  height: 80vh;
+  overflow-y: auto;
+}
+.playlist {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+/* Playlist Scroll Bar */
+.playlist-div::-webkit-scrollbar {
+  height: 5px;
+  width: 4px;
+  border: 1px solid #d5d5d5;
+  background: #d5d5d5;
+}
+.playlist-div::-webkit-scrollbar-track {
+  --webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+.playlist-div::-webkit-scrollbar-thumb {
+  background-color: #d5d5d5;
+  outline: 1px solid #eee;
+}
+.song-index {
+  font-size: 1.4rem;
+  margin-right: 5px;
+}
+.playlist p {
+  width: 90%;
+  font-size: 1.2rem;
+  border-bottom: 1px solid rgb(114, 114, 114);
+  padding: 5px 0;
+  cursor: pointer;
 }
